--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="target.html"><strong aria-hidden="true">2.</strong> Target Group</a></li><li class="chapter-item expanded "><a href="design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Architecture</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="arch/system.html"><strong aria-hidden="true">4.1.</strong> System Overview</a></li><li class="chapter-item expanded "><a href="arch/components.html"><strong aria-hidden="true">4.2.</strong> Component Overview</a></li><li class="chapter-item expanded "><a href="arch/if.html"><strong aria-hidden="true">4.3.</strong> Interface</a></li></ol></li><li class="chapter-item expanded "><a href="plan.html"><strong aria-hidden="true">5.</strong> Development Plan</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="target.html"><strong aria-hidden="true">2.</strong> Target Group</a></li><li class="chapter-item expanded "><a href="design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Architecture</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="arch/system.html"><strong aria-hidden="true">4.1.</strong> System Overview</a></li><li class="chapter-item expanded "><a href="arch/components.html"><strong aria-hidden="true">4.2.</strong> Component Overview</a></li><li class="chapter-item expanded "><a href="arch/if.html"><strong aria-hidden="true">4.3.</strong> Interface</a></li></ol></li><li class="chapter-item expanded "><a href="plan.html"><strong aria-hidden="true">5.</strong> Development Plan</a></li><li class="chapter-item expanded "><a href="plan.html"><strong aria-hidden="true">6.</strong> Budget</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -175,13 +175,22 @@
 <p>LibreCar is a fully reconfigurable test instrument that provides all the hardware, gateware, firmware, and software you will need to work with—and, indeed, to master Automotive domain. Below are a few of the challenges to which one should be able to apply LibreCar to:</p>
 <ul>
 <li>
-<p>Protocol analysis for Automotive protocols like Diagnostics, XCP and DLT. Useful for both educators/students too understand the current working of automotive ECU and standard autmotive protocols.</p>
+<p>Protocol analysis for Automotive protocols like Diagnostics, XCP and DLT. </p>
+<ul>
+<li>Useful for both educators/students too understand the current working of automotive ECU and standard autmotive protocols.</li>
+</ul>
 </li>
 <li>
-<p>Creating your own custom Automotive ECU: LibreCar provides Amaranth gateware that allows you to create CAN and Ethernet devices in gateware, firmware, or a combination of the two. Useful for Automotive manufacturers/suppliers to develop solutions that they can tweak it to better suite their product needs and are no longer tied to ASIC offering from semiconductor manufacturers.</p>
+<p>Creating your own custom Automotive ECU: LibreCar provides Amaranth gateware that allows you to create CAN and Ethernet devices in gateware, firmware, or a combination of the two. </p>
+<ul>
+<li>Useful for Automotive manufacturers/suppliers to develop solutions that they can tweak it to better suite their product needs and are no longer tied to ASIC offering from semiconductor manufacturers.</li>
+</ul>
 </li>
 <li>
-<p>Security research: LibreCar hardware and gateware simplify the emulation and rapid prototyping of compliant and non-compliant Automotive devices. LibreCar based hardware is dynamically reconfigurable, so it gives you the flexibility to create any configuration for an ECU and engage in almost any (mis)behavior/hacks. Useful for researchers engaging in study of current security and bandwidth limitations of modern automotive vehicles and come up with new approach to solve them.</p>
+<p>Security research: LibreCar hardware and gateware simplify the emulation and rapid prototyping of compliant and non-compliant Automotive devices. LibreCar based hardware is dynamically reconfigurable, so it gives you the flexibility to create any configuration for an ECU and engage in almost any (mis)behavior/hacks.</p>
+<ul>
+<li>Useful for researchers engaging in study of current security and bandwidth limitations of modern automotive vehicles and come up with new approach to solve them.</li>
+</ul>
 </li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="overview"><a class="header" href="#overview">Overview</a></h1>
@@ -227,19 +236,19 @@ and PHY support to enable Ethernet functionality at data rates up to 10 Mbit/s.<
 Below steps are used to send a signal:</p>
 <ul>
 <li>
-<p>Establish a connection: First, you need to establish a connection between the LibreCar OBD-II module and the diagnostic tool. This can be done using a wired or wireless connection. For example, you can connect the LibreCar OBD-II module to a Wi-Fi access point and use a diagnostic tool connected to the same network to communicate with it.</p>
+<p><strong>Establish a connection</strong>: First, you need to establish a connection between the LibreCar OBD-II module and the diagnostic tool. This can be done using a wired or wireless connection. For example, you can connect the LibreCar OBD-II module to a Wi-Fi access point and use a diagnostic tool connected to the same network to communicate with it.</p>
 </li>
 <li>
-<p>Set up LibreCar OBD-II module: Once the connection is established, you need to configure the LibreCar OBD-II module to communicate over IP. This can be done by setting the IP address and other network parameters.</p>
+<p><strong>Set up LibreCar OBD-II module</strong>: Once the connection is established, you need to configure the LibreCar OBD-II module to communicate over IP. This can be done by setting the IP address and other network parameters.</p>
 </li>
 <li>
-<p>Identify the OBD-II commands: The OBD-II standard defines a set of commands that can be used to communicate with the different ECUs in the vehicle. You need to identify the OBD-II commands that are relevant to the diagnostic data you are trying to retrieve.</p>
+<p><strong>Identify the OBD-II commands</strong>: The OBD-II standard defines a set of commands that can be used to communicate with the different ECUs in the vehicle. You need to identify the OBD-II commands that are relevant to the diagnostic data you are trying to retrieve.</p>
 </li>
 <li>
-<p>Send the OBD-II commands over IP: Once you have identified the relevant OBD-II commands, you can send them over IP to the OBD-II device. You can use a diagnostic tool or a custom application to send the OBD-II commands.</p>
+<p><strong>Send the OBD-II commands over IP</strong>: Once you have identified the relevant OBD-II commands, you can send them over IP to the OBD-II device. You can use a diagnostic tool or a custom application to send the OBD-II commands.</p>
 </li>
 <li>
-<p>Receive the response: Once the OBD-II commands are sent,  LibreCar OBD-II module will respond with the diagnostic data in the form of a response message. You can then parse the response message to extract the diagnostic data you need.</p>
+<p><strong>Receive the response</strong>: Once the OBD-II commands are sent,  LibreCar OBD-II module will respond with the diagnostic data in the form of a response message. You can then parse the response message to extract the diagnostic data you need.</p>
 </li>
 </ul>
 <h2 id="rest-api-interface"><a class="header" href="#rest-api-interface">REST API Interface</a></h2>
@@ -287,10 +296,13 @@ Below steps are used to send a signal:</p>
 <p>Develop the middleware:</p>
 <ul>
 <li>Task: Once the hardware and firmware development are complete, the next step is to build the middleware which can support automotive protocols like Diagnostics, Log&amp;Trace and  Measuement&amp;Calibration based on Autosar(AUTomotive Open System ARchitecture) specification.</li>
-<li>Acceptance Criteria: Below Automotive protocols are up to make it function like a modern automotive ECU:</li>
+<li>Acceptance Criteria: Below Automotive protocols are up to make it function like a modern automotive ECU:
+<ul>
 <li>DoIP ( Diagnostics over Internet Protocol )</li>
 <li>DLT ( Diagnostics Log and Trace ) </li>
 <li>XCP (Universal Measurement and Calibration Protocol )</li>
+</ul>
+</li>
 <li>Duration: 80 hours</li>
 </ul>
 </li>
@@ -298,9 +310,65 @@ Below steps are used to send a signal:</p>
 <p>Manufacturing:</p>
 <ul>
 <li>Task: After the prototype has been tested on a development FPGA board as working, the final product can be manufactured. This involves designing and producing the few PCBs available for evaluation by interested end users.</li>
-<li>Acceptance Criteria:</li>
+<li>Acceptance Criteria:
+<ul>
 <li>Custom PCB is available with Diagnostic Interface for end user to use the LibreCar ECU.</li>
 <li>Documentation is available to end user how to use the LibreCar ECU with firmware, gateware and PCB design files all available as opensource.</li>
+</ul>
+</li>
+<li>Duration: 80 hours</li>
+</ul>
+</li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="work-breakdown-structure-1"><a class="header" href="#work-breakdown-structure-1">WORK BREAKDOWN STRUCTURE</a></h1>
+<p>A work breakdown structure has been created to identify and correctly estimate the time and cost of each possible task in the proposal. Most of task do depend on the progress of each other so they need to be executed in a serial Top-Down approach.</p>
+<h2 id="task-duration-1"><a class="header" href="#task-duration-1">Task Duration</a></h2>
+<p>To estimate the time of each task, the beta distribution formula was used, shown below. This formula allows to base the estimated time more on the average time a task may require, giving a more accurate estimation of the time needed to finish a task.</p>
+<p>𝐸𝑠𝑡𝑖𝑚𝑎𝑡𝑒𝑑 𝑡𝑖𝑚𝑒 = (𝑜𝑝𝑡𝑖𝑚𝑖𝑠𝑡𝑖𝑐 𝑡𝑖𝑚𝑒 + 4 ∗ 𝑎𝑣𝑒𝑟𝑎𝑔𝑒 𝑡𝑖𝑚𝑒 + 𝑝𝑒𝑠𝑠𝑖𝑚𝑖𝑠𝑡𝑖𝑐 𝑡𝑖𝑚𝑒) / 6 </p>
+<p>Each task completion is considered as a Major or Minor Milestone to help us break down the overall Project duration into smaller sprints which reduces the chance of the task falling into overtime, as well as speeding up the possible completion time.</p>
+<h2 id="milestones--1"><a class="header" href="#milestones--1">Milestones :</a></h2>
+<p>The milestones for this project have been set in a chronological order, with independent, parallelizable tasks being set at the start, and interdependent tasks being arranged in a serial order and can be done one after the other.</p>
+<ul>
+<li>
+<p>Develop the hardware:</p>
+<ul>
+<li>Task: Create an opensource gateware which comprises of softcore RISC-V and peripherals like CAN and Ethernet</li>
+<li>Acceptance Criteria: Gateware can be compiled and booted up on a FPGA development board.</li>
+<li>Duration: 80 hours</li>
+</ul>
+</li>
+<li>
+<p>Develop the firmware:</p>
+<ul>
+<li>Task: Create opensource firmware which comprises of kernel and device drivers to bring up RISC-V soft core and peripherals like CAN and Ethernet.</li>
+<li>Acceptance Criteria: FPGA runs a RISC-V softcore with CAN bus and Ethernet bus communication working.</li>
+<li>Duration: 80 hours</li>
+</ul>
+</li>
+<li>
+<p>Develop the middleware:</p>
+<ul>
+<li>Task: Once the hardware and firmware development are complete, the next step is to build the middleware which can support automotive protocols like Diagnostics, Log&amp;Trace and  Measuement&amp;Calibration based on Autosar(AUTomotive Open System ARchitecture) specification.</li>
+<li>Acceptance Criteria: Below Automotive protocols are up to make it function like a modern automotive ECU:
+<ul>
+<li>DoIP ( Diagnostics over Internet Protocol )</li>
+<li>DLT ( Diagnostics Log and Trace ) </li>
+<li>XCP (Universal Measurement and Calibration Protocol )</li>
+</ul>
+</li>
+<li>Duration: 80 hours</li>
+</ul>
+</li>
+<li>
+<p>Manufacturing:</p>
+<ul>
+<li>Task: After the prototype has been tested on a development FPGA board as working, the final product can be manufactured. This involves designing and producing the few PCBs available for evaluation by interested end users.</li>
+<li>Acceptance Criteria:
+<ul>
+<li>Custom PCB is available with Diagnostic Interface for end user to use the LibreCar ECU.</li>
+<li>Documentation is available to end user how to use the LibreCar ECU with firmware, gateware and PCB design files all available as opensource.</li>
+</ul>
+</li>
 <li>Duration: 80 hours</li>
 </ul>
 </li>
