--- a/target.html
+++ b/target.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="target.html" class="active"><strong aria-hidden="true">2.</strong> Target Group</a></li><li class="chapter-item expanded "><a href="design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Architecture</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="arch/system.html"><strong aria-hidden="true">4.1.</strong> System Overview</a></li><li class="chapter-item expanded "><a href="arch/components.html"><strong aria-hidden="true">4.2.</strong> Component Overview</a></li><li class="chapter-item expanded "><a href="arch/if.html"><strong aria-hidden="true">4.3.</strong> Interface</a></li></ol></li><li class="chapter-item expanded "><a href="plan.html"><strong aria-hidden="true">5.</strong> Development Plan</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="target.html" class="active"><strong aria-hidden="true">2.</strong> Target Group</a></li><li class="chapter-item expanded "><a href="design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Architecture</div></li><li><ol class="section"><li class="chapter-item expanded "><a href="arch/system.html"><strong aria-hidden="true">4.1.</strong> System Overview</a></li><li class="chapter-item expanded "><a href="arch/components.html"><strong aria-hidden="true">4.2.</strong> Component Overview</a></li><li class="chapter-item expanded "><a href="arch/if.html"><strong aria-hidden="true">4.3.</strong> Interface</a></li></ol></li><li class="chapter-item expanded "><a href="plan.html"><strong aria-hidden="true">5.</strong> Development Plan</a></li><li class="chapter-item expanded "><a href="plan.html"><strong aria-hidden="true">6.</strong> Budget</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -150,13 +150,22 @@
 <p>LibreCar is a fully reconfigurable test instrument that provides all the hardware, gateware, firmware, and software you will need to work with—and, indeed, to master Automotive domain. Below are a few of the challenges to which one should be able to apply LibreCar to:</p>
 <ul>
 <li>
-<p>Protocol analysis for Automotive protocols like Diagnostics, XCP and DLT. Useful for both educators/students too understand the current working of automotive ECU and standard autmotive protocols.</p>
+<p>Protocol analysis for Automotive protocols like Diagnostics, XCP and DLT. </p>
+<ul>
+<li>Useful for both educators/students too understand the current working of automotive ECU and standard autmotive protocols.</li>
+</ul>
 </li>
 <li>
-<p>Creating your own custom Automotive ECU: LibreCar provides Amaranth gateware that allows you to create CAN and Ethernet devices in gateware, firmware, or a combination of the two. Useful for Automotive manufacturers/suppliers to develop solutions that they can tweak it to better suite their product needs and are no longer tied to ASIC offering from semiconductor manufacturers.</p>
+<p>Creating your own custom Automotive ECU: LibreCar provides Amaranth gateware that allows you to create CAN and Ethernet devices in gateware, firmware, or a combination of the two. </p>
+<ul>
+<li>Useful for Automotive manufacturers/suppliers to develop solutions that they can tweak it to better suite their product needs and are no longer tied to ASIC offering from semiconductor manufacturers.</li>
+</ul>
 </li>
 <li>
-<p>Security research: LibreCar hardware and gateware simplify the emulation and rapid prototyping of compliant and non-compliant Automotive devices. LibreCar based hardware is dynamically reconfigurable, so it gives you the flexibility to create any configuration for an ECU and engage in almost any (mis)behavior/hacks. Useful for researchers engaging in study of current security and bandwidth limitations of modern automotive vehicles and come up with new approach to solve them.</p>
+<p>Security research: LibreCar hardware and gateware simplify the emulation and rapid prototyping of compliant and non-compliant Automotive devices. LibreCar based hardware is dynamically reconfigurable, so it gives you the flexibility to create any configuration for an ECU and engage in almost any (mis)behavior/hacks.</p>
+<ul>
+<li>Useful for researchers engaging in study of current security and bandwidth limitations of modern automotive vehicles and come up with new approach to solve them.</li>
+</ul>
 </li>
 </ul>
 
