--- a/print.html
+++ b/print.html
@@ -195,12 +195,14 @@
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="design"><a class="header" href="#design">Design</a></h1>
 <p>LibreCar FPGA runs a RISC-V  softcore complemented by peripherals for the implementation of physical interfaces such as CAN, Automotive Ethernet, and some general purpose interfaces (GPIO). Furthermore, the FPGA is supported by Flash and RAM memory.</p>
-<p>The main functions of this design  is to come up with a Communication Engine which enables Routing or switching of data packets between all the interfaces based on:
-* LIN data – based on LIN-ID (L2)
-* CAN data – based on CAN-ID (L2)
-* Ethernet / IP – based on Ethernet MAC &amp; IP address (with TCP/UDP port for packet inspection)
-* AUTOSAR PDU – based on AUTOSAR PDU ID</p>
-<p><img src="images/PDU.svg" alt=" Autosar PDU " /></p>
+<p>The main functions of this design  is to come up with a Communication Engine which enables Routing or switching of data packets between all the interfaces based on:</p>
+<ul>
+<li>LIN data – based on LIN-ID (L2)</li>
+<li>CAN data – based on CAN-ID (L2)</li>
+<li>Ethernet / IP – based on Ethernet MAC &amp; IP address (with TCP/UDP port for packet inspection)</li>
+<li>AUTOSAR PDU – based on AUTOSAR PDU ID</li>
+</ul>
+<p><img src="images/PDU.png" alt=" Autosar PDU " /></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="system-architecture"><a class="header" href="#system-architecture">System Architecture</a></h1>
 <p><img src="arch/../images/flow.svg" alt=" System architecture" /></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="components"><a class="header" href="#components">Components</a></h1>
